src/index.css
@font-face {
  font-family: "Filson Pro Regular";
  src: url("/fonts/Filson/FILSONPROREGULAR.OTF");
}
@font-face {
  font-family: "TTtravels Next Bold";
  src: url("/fonts/TTtravels/TTTRAVELSNEXTBOLD.OTF");
}
@font-face {
  font-family: "TTtravels Next Demibold Italic";
  src: url("/fonts/TTtravels/TTTRAVELSNEXTDBOLDI.OTF");
}
@font-face {
  font-family: "TTtravels Next Demibold";
  src: url("/fonts/TTtravels/TTTRAVELSNEXTDBOLD.OTF");
}

:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: black;
  --ligher-beige: #f2d8a0;
}
body,
html {
  margin: 0;
  padding: 0;
  color: white;
}
* {
  box-sizing: border-box;
  font-family: "Filson Pro Regular", sans-serif;
  color: var(--ligher-beige);
  margin: 0;
  padding: 0;
}

